Bug #25745 (ctype functions don't deal with non-ascii characters properly)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@141738 c90b9560-bf6c-de11-be94-00142212c4b1